# quine

./: CMakeLists.txt  README.md  configure.py  out.cpp
.cache/clangd/index/: main.cpp.B9CCDB9B3783FCDA.idx
cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
quine/: CMakeLists.txt
quine/include/quine/: CMakeLists.txt
quine/source/: CMakeLists.txt
